--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
    
     <body>
         <div class="wrapper">
+            <div class="actions">
+                <button id="idle">Idle</button>
+                <button id="run">Run</button>
+                <button id="walking">walking</button>
+                <button id="fight">Fight</button>
+                <button id="dance">Dance</button>
+            </div>
       <div id = "canvas"></div>
       </div>
     </body>
