Hi Animtion issue fixed

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     <body>
         <div class="wrapper">
             <div class="actions">
+                <button id="interact">Interact</button>
                 <button id="idle">Idle</button>
                 <button id="run">Run</button>
                 <button id="walking">walking</button>
                 <button id="fight">Fight</button>
                 <button id="dance">Dance</button>
+                <button id="stop">Stop</button>
             </div>
       <div id = "canvas"></div>
       </div>
