camera anim added

--- a/index.html
+++ b/index.html
@@ -24,16 +24,11 @@
          <h3 id="output" class="hide"></h3>
         <div class="wrapper">
             <div class="actions">
-                <button id="interact">Interact</button>
-                <!-- <button id="idle">Idle</button>
-                <button id="run">Run</button>
-                <button id="walk">walk</button>
-                <button id="fight">Fight</button>
-                <button id="dance">Dance</button>
-                <button id="stop">Stop</button> -->
+                <button id="open">Open</button>
             </div>
       <div id = "canvas"></div>
       </div>
     </body>
+    <script src="js/libs/TweenMax.js"></script>
     <script type="module"src="js/config.js"></script>
 </html>
