--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
          padding: 0;
          width:100%;
          height:100%;
+         font-family: Arial, Helvetica, sans-serif;
         }
         .container{
-            background-color: aqua;
             width:100%;
             height:80%;
         }
@@ -28,13 +28,12 @@
         }
         .canvasWrapper{
             /* margin:auto; */
+            margin-top:40px;
             float: left;
-            background-color: green;
             width:50%;
             height:100%;
         }
         .buttonWrapper{
-            background-color: burlywood;
             float:left;
             width: 20%;
             height: 100%;
@@ -50,7 +49,6 @@
         }
         #canvas{
             float:right;
-            background-color: blueviolet;
             width:80%;
             height:100%;  
          }
@@ -82,29 +80,66 @@
             cursor:pointer;
          }
          .contentWrapper{
-            background-color: brown;
+            margin-top:40px;
             float:right;
             width:50%;
             height:100%;
          }
          .innerContentWrapper{
-            background-color: aqua;
             width:100%;
             height:100%;
          }
          .headerContentWrapper{
             float:left;
-            background-color: blueviolet;
             width: 80%;
             /* height:60px; */
          }
-         .headerContentWrapper h1{
+         .headerContentWrapper h2{
             margin-left:50px;
          }
          .headerContentWrapper p{
+            color:grey;
             margin-left:50px;
             font-size: large;
             margin-top:-15px;
+         }
+         .priceContentWrapper{
+            width:100%;
+            float: left;
+         }
+         .priceContentWrapper h2{
+            margin-left:50px;
+         }
+         .priceContentWrapper p{
+            color:grey;
+            margin-left:50px;
+            font-size: large;
+            margin-top:-15px;
+         }
+         .productContentWrapper{
+            width:100%;
+            float:left;
+         }
+         .productContentWrapper h3{
+            margin-left:50px;
+         }
+         .productContentWrapper p{
+            margin-left:50px;
+         }
+         .buyContentWrapper {
+            float: left;
+            width:100%;
+         }
+         .buyContentWrapper button{
+            margin-left:50px;
+            width:300px;
+            height:50px;
+            background-color: crimson;
+            color:white;
+            font-size:20px;
+            cursor: pointer;
+            border:none;
+            border-radius: 10px;
          }
     </style>
     <script src="js/libs/jquery-3.6.4.min.js"></script>
@@ -133,8 +168,29 @@
             <div class="contentWrapper">
                 <div class="innerContentWrapper">
                     <div class="headerContentWrapper">
-                        <h1>SPIDER-MAN Mile Morales</h1>
+                        <h2>SPIDER-MAN Mile Morales</h2>
                         <p>Marvel Comics Spiderman Action Figure</p>
+                    </div>
+                    <div class="priceContentWrapper">
+                        <h2>5000 INR</h2>
+                        <p>Inclusive of all tax</p>
+                    </div>
+                    <div class="productContentWrapper">
+                        <h3><u>Product Details : </u></h3>
+                        <p>Set Content : 1 Marvel comics spiderman action figure</br>
+                            Type : Action Figure</br>
+                            Color : Black & Gold</br>
+                            Age Group : 11 years plus</br>
+                            Material : Plastic</p>
+                        <h3><u>Features : </u></h3>
+                        <p>- &nbsp; Dance</br>
+                           - &nbsp; Walk</br>
+                           - &nbsp; Fight</br>
+                           - &nbsp; Run </br>
+                           - &nbsp; Hi-fi</br></p>
+                    </div>
+                    <div class="buyContentWrapper">
+                        <button>ADD TO CART</button>
                     </div>
                 </div>
             </div>
