Camera animation for front side and back

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
             </div>
             <div class="canvasWrapper">
                 <div class="buttonWrapper">
-                    <img src="imgs/front.jpg"/><br>
-                    <img src="imgs/side.jpg"/><br>
-                    <img src="imgs/back.jpg"/>
+                    <img id="front" src="imgs/front.jpg"/><br>
+                    <img id="side" src="imgs/side.jpg"/><br>
+                    <img id="back" src="imgs/back.jpg"/>
                     
                 </div>
                
@@ -181,7 +181,7 @@
                             Type : Action Figure</br>
                             Color : Black & Gold</br>
                             Age Group : 11 years plus</br>
-                            Material : Plastic</p>
+                            Material : Rigged</p>
                         <h3><u>Features : </u></h3>
                         <p>- &nbsp; Dance</br>
                            - &nbsp; Walk</br>
